// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Full migration should print the same output given the same HTTP requests 1`] = `
Array [
  "Migrating from 98nzfixt/production to 98nzfixt/staging ",
]
`;

exports[`Full migration should print the same output given the same HTTP requests 2`] = `
Array [
  "Fetching 1 initial queries..",
]
`;

exports[`Full migration should print the same output given the same HTTP requests 3`] = `
Array [
  "Found 5 initial documents",
]
`;

exports[`Full migration should print the same output given the same HTTP requests 4`] = `
Array [
  "    movie: 5",
]
`;

exports[`Full migration should print the same output given the same HTTP requests 5`] = `
Array [
  "    + 78 referenced documents",
]
`;

exports[`Full migration should print the same output given the same HTTP requests 6`] = `
Array [
  "Fetching referenced documents in 16 batches..",
]
`;

exports[`Full migration should print the same output given the same HTTP requests 7`] = `
Array [
  "Fetched all referenced documents",
]
`;

exports[`Full migration should print the same output given the same HTTP requests 8`] = `
Array [
  "      + 63 source assets",
]
`;

exports[`Full migration should print the same output given the same HTTP requests 9`] = `
Array [
  "Clearing 98nzfixt/staging dataset...",
]
`;

exports[`Full migration should print the same output given the same HTTP requests 10`] = `
Array [
  "Removed 51 documents from 98nzfixt/staging",
]
`;

exports[`Full migration should print the same output given the same HTTP requests 11`] = `
Array [
  "Found 63 new assets to upload",
]
`;

exports[`Full migration should print the same output given the same HTTP requests 12`] = `
Array [
  "Inserting 74 documents into dataset \\"staging\\"",
]
`;

exports[`Full migration should print the same output given the same HTTP requests 13`] = `
Array [
  "Inserted 74 documents in 3 batches",
]
`;

exports[`Full migration should print the same output given the same HTTP requests 14`] = `
Array [
  "Strengthening references..",
]
`;

exports[`Full migration should print the same output given the same HTTP requests 15`] = `
Array [
  "Success! 🎉",
]
`;
